--- a/styles/common.css
+++ b/styles/common.css
@@ -62,12 +62,18 @@ body {
     border-top: 1px solid white;
     color: #fff;
     padding: 20px;
-    text-align: center;
 }
 
 .footer-content {
     display: flex;
     justify-content: space-around;
+}
+
+@media screen and (max-width: 480px) {
+
+   .footer-content{
+    flex-direction: column;
+   }
 }
 
 .company-info,
