--- a/styles/contact.css
+++ b/styles/contact.css
@@ -19,7 +19,7 @@ h2 {
     text-align: center;
 }
 
-p {
+article p {
     text-align: center;
 }
 
@@ -42,4 +42,43 @@ a {
 picture img {
     width: 90vw;
     height: 34.61vw;
+}
+
+form {
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    width: 66vw;
+    margin: auto;
+    margin-bottom: 20px;
+    margin-top: 40px;
+}
+
+label {
+    display: block;
+    margin-bottom: 8px;
+    font-weight: bold;
+}
+
+input, textarea {
+    width: 100%;
+    padding: 8px;
+    margin-bottom: 16px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+}
+
+button {
+    background-color: #007bff;
+    color: #fff;
+    padding: 10px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+button:hover {
+    background-color: #0056b3;
 }
